-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: 3.3.12
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Platforms 2016-09-19
-
None
-
None
-
None
-
None
-
None
-
None
-
None
If dbpath is not specified, mongod shuts down with the following error message.
2016-09-06T13:57:15.086-0400 I STORAGE [initandlisten] exception in initAndListen: 40311 Cannot start server. The command line option '--repairpath' is only supported by the mmapv1 storage engine, terminating
This error message was added in: https://github.com/mongodb/mongo/commit/078f29b7ed3361c6d19ce55a7fa32643c9987cbd
This error occurs because dbpath = "c:\data\db" and repairpath = "/data/db" due to this code: https://github.com/mongodb/mongo/blob/master/src/mongo/db/mongod_options.cpp#L1322-L1329