SERVER-25970 mongod with WT does not start on Windows unless dbpath is specified